// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ManualBackupStep1 Theme appearance renders dark SRP design image by default (dark theme) 1`] = `
<RNCSafeAreaView
  edges={
    {
      "bottom": "additive",
      "left": "off",
      "right": "off",
      "top": "off",
    }
  }
  style={
    {
      "backgroundColor": "#ffffff",
      "flex": 1,
    }
  }
>
  <View
    style={
      [
        {
          "flex": 1,
          "paddingHorizontal": 16,
        },
      ]
    }
  >
    <View
      style={
        {
          "flex": 1,
          "justifyContent": "space-between",
        }
      }
    >
      <View
        style={
          {
            "flex": 1,
          }
        }
      >
        <View
          style={
            {
              "flex": 1,
              "flexDirection": "column",
              "gap": 16,
            }
          }
          testID="manual_backup_step_1-screen"
        >
          <Text
            accessibilityRole="text"
            style={
              {
                "color": "#121314",
                "fontFamily": "Geist-Bold",
                "fontSize": 32,
                "letterSpacing": 0,
                "lineHeight": 40,
              }
            }
          >
            Save your Secret Recovery Phrase
          </Text>
          <View
            style={
              {
                "justifyContent": "flex-start",
              }
            }
          >
            <Text
              accessibilityRole="text"
              style={
                {
                  "color": "#686e7d",
                  "fontFamily": "Geist-Regular",
                  "fontSize": 16,
                  "letterSpacing": 0,
                  "lineHeight": 24,
                }
              }
            >
              Your
               
              <Text
                accessibilityRole="text"
                onPress={[Function]}
                style={
                  {
                    "color": "#4459ff",
                    "fontFamily": "Geist-Regular",
                    "fontSize": 16,
                    "letterSpacing": 0,
                    "lineHeight": 24,
                  }
                }
              >
                Secret Recovery Phrase
                 
              </Text>
              gives full wallet access.
               
              <Text
                accessibilityRole="text"
                style={
                  {
                    "color": "#686e7d",
                    "fontFamily": "Geist-Medium",
                    "fontSize": 16,
                    "letterSpacing": 0,
                    "lineHeight": 24,
                  }
                }
              >
                Write it down with the correct order and numbers. Keep it safe and never share it.
              </Text>
            </Text>
          </View>
          <View
            style={
              {
                "backgroundColor": "#ffffff",
                "borderColor": "#b7bbc8",
                "borderRadius": 8,
                "borderWidth": 1,
                "flexDirection": "row",
                "minHeight": 230,
              }
            }
          >
            <View
              style={
                {
                  "borderRadius": 8,
                  "flex": 1,
                }
              }
            >
              <TouchableOpacity
                onPress={[Function]}
                style={
                  {
                    "borderRadius": 8,
                    "bottom": 0,
                    "flex": 1,
                    "height": "100%",
                    "left": 0,
                    "position": "absolute",
                    "right": 0,
                    "top": 0,
                  }
                }
                testID="blur-button"
              >
                <View
                  accessibilityIgnoresInvertColors={true}
                  style={
                    {
                      "borderRadius": 8,
                      "bottom": 0,
                      "flex": 1,
                      "height": "100%",
                      "left": 0,
                      "opacity": 0.5,
                      "position": "absolute",
                      "right": 0,
                      "top": 0,
                    }
                  }
                >
                  <Image
                    resizeMode="cover"
                    source={1}
                    style={
                      [
                        {
                          "bottom": 0,
                          "left": 0,
                          "position": "absolute",
                          "right": 0,
                          "top": 0,
                        },
                        {
                          "height": "100%",
                          "width": undefined,
                        },
                        undefined,
                      ]
                    }
                  />
                </View>
                <View
                  style={
                    {
                      "alignItems": "center",
                      "borderRadius": 8,
                      "flex": 1,
                      "flexDirection": "column",
                      "height": "100%",
                      "justifyContent": "center",
                      "paddingHorizontal": 24,
                      "paddingVertical": 45,
                      "rowGap": 16,
                    }
                  }
                >
                  <SvgMock
                    color="#121314"
                    fill="currentColor"
                    height={32}
                    name="EyeSlash"
                    style={
                      {
                        "height": 32,
                        "width": 32,
                      }
                    }
                    width={32}
                  />
                  <Text
                    accessibilityRole="text"
                    style={
                      {
                        "color": "#121314",
                        "fontFamily": "Geist-Medium",
                        "fontSize": 16,
                        "letterSpacing": 0,
                        "lineHeight": 24,
                      }
                    }
                  >
                    Tap to reveal
                  </Text>
                  <Text
                    accessibilityRole="text"
                    style={
                      {
                        "color": "#121314",
                        "fontFamily": "Geist-Regular",
                        "fontSize": 14,
                        "letterSpacing": 0,
                        "lineHeight": 22,
                      }
                    }
                  >
                    Make sure no one is watching your screen.
                  </Text>
                </View>
              </TouchableOpacity>
            </View>
          </View>
        </View>
      </View>
      <View
        style={
          {
            "gap": 16,
            "marginBottom": 0,
            "paddingHorizontal": 0,
          }
        }
      >
        <TouchableOpacity
          accessibilityRole="button"
          accessible={true}
          activeOpacity={1}
          disabled={true}
          onPress={[Function]}
          onPressIn={[Function]}
          onPressOut={[Function]}
          style={
            {
              "alignItems": "center",
              "alignSelf": "stretch",
              "backgroundColor": "#121314",
              "borderRadius": 12,
              "flexDirection": "row",
              "height": 48,
              "justifyContent": "center",
              "opacity": 0.5,
              "overflow": "hidden",
              "paddingHorizontal": 16,
            }
          }
          testID="manual-backup-step-continue-button"
        >
          <Text
            accessibilityRole="text"
            style={
              {
                "color": "#ffffff",
                "fontFamily": "Geist-Medium",
                "fontSize": 16,
                "letterSpacing": 0,
                "lineHeight": 24,
              }
            }
          >
            Continue
          </Text>
        </TouchableOpacity>
      </View>
    </View>
  </View>
  <View />
</RNCSafeAreaView>
`;

exports[`ManualBackupStep1 Theme appearance renders light SRP design image for light theme 1`] = `
<RNCSafeAreaView
  edges={
    {
      "bottom": "additive",
      "left": "off",
      "right": "off",
      "top": "off",
    }
  }
  style={
    {
      "backgroundColor": "#ffffff",
      "flex": 1,
    }
  }
>
  <View
    style={
      [
        {
          "flex": 1,
          "paddingHorizontal": 16,
        },
      ]
    }
  >
    <View
      style={
        {
          "flex": 1,
          "justifyContent": "space-between",
        }
      }
    >
      <View
        style={
          {
            "flex": 1,
          }
        }
      >
        <View
          style={
            {
              "flex": 1,
              "flexDirection": "column",
              "gap": 16,
            }
          }
          testID="manual_backup_step_1-screen"
        >
          <Text
            accessibilityRole="text"
            style={
              {
                "color": "#121314",
                "fontFamily": "Geist-Bold",
                "fontSize": 32,
                "letterSpacing": 0,
                "lineHeight": 40,
              }
            }
          >
            Save your Secret Recovery Phrase
          </Text>
          <View
            style={
              {
                "justifyContent": "flex-start",
              }
            }
          >
            <Text
              accessibilityRole="text"
              style={
                {
                  "color": "#686e7d",
                  "fontFamily": "Geist-Regular",
                  "fontSize": 16,
                  "letterSpacing": 0,
                  "lineHeight": 24,
                }
              }
            >
              Your
               
              <Text
                accessibilityRole="text"
                onPress={[Function]}
                style={
                  {
                    "color": "#4459ff",
                    "fontFamily": "Geist-Regular",
                    "fontSize": 16,
                    "letterSpacing": 0,
                    "lineHeight": 24,
                  }
                }
              >
                Secret Recovery Phrase
                 
              </Text>
              gives full wallet access.
               
              <Text
                accessibilityRole="text"
                style={
                  {
                    "color": "#686e7d",
                    "fontFamily": "Geist-Medium",
                    "fontSize": 16,
                    "letterSpacing": 0,
                    "lineHeight": 24,
                  }
                }
              >
                Write it down with the correct order and numbers. Keep it safe and never share it.
              </Text>
            </Text>
          </View>
          <View
            style={
              {
                "backgroundColor": "#ffffff",
                "borderColor": "#b7bbc8",
                "borderRadius": 8,
                "borderWidth": 1,
                "flexDirection": "row",
                "minHeight": 230,
              }
            }
          >
            <View
              style={
                {
                  "borderRadius": 8,
                  "flex": 1,
                }
              }
            >
              <TouchableOpacity
                onPress={[Function]}
                style={
                  {
                    "borderRadius": 8,
                    "bottom": 0,
                    "flex": 1,
                    "height": "100%",
                    "left": 0,
                    "position": "absolute",
                    "right": 0,
                    "top": 0,
                  }
                }
                testID="blur-button"
              >
                <View
                  accessibilityIgnoresInvertColors={true}
                  style={
                    {
                      "borderRadius": 8,
                      "bottom": 0,
                      "flex": 1,
                      "height": "100%",
                      "left": 0,
                      "opacity": 0.5,
                      "position": "absolute",
                      "right": 0,
                      "top": 0,
                    }
                  }
                >
                  <Image
                    resizeMode="cover"
                    source={1}
                    style={
                      [
                        {
                          "bottom": 0,
                          "left": 0,
                          "position": "absolute",
                          "right": 0,
                          "top": 0,
                        },
                        {
                          "height": "100%",
                          "width": undefined,
                        },
                        undefined,
                      ]
                    }
                  />
                </View>
                <View
                  style={
                    {
                      "alignItems": "center",
                      "borderRadius": 8,
                      "flex": 1,
                      "flexDirection": "column",
                      "height": "100%",
                      "justifyContent": "center",
                      "paddingHorizontal": 24,
                      "paddingVertical": 45,
                      "rowGap": 16,
                    }
                  }
                >
                  <SvgMock
                    color="#121314"
                    fill="currentColor"
                    height={32}
                    name="EyeSlash"
                    style={
                      {
                        "height": 32,
                        "width": 32,
                      }
                    }
                    width={32}
                  />
                  <Text
                    accessibilityRole="text"
                    style={
                      {
                        "color": "#121314",
                        "fontFamily": "Geist-Medium",
                        "fontSize": 16,
                        "letterSpacing": 0,
                        "lineHeight": 24,
                      }
                    }
                  >
                    Tap to reveal
                  </Text>
                  <Text
                    accessibilityRole="text"
                    style={
                      {
                        "color": "#121314",
                        "fontFamily": "Geist-Regular",
                        "fontSize": 14,
                        "letterSpacing": 0,
                        "lineHeight": 22,
                      }
                    }
                  >
                    Make sure no one is watching your screen.
                  </Text>
                </View>
              </TouchableOpacity>
            </View>
          </View>
        </View>
      </View>
      <View
        style={
          {
            "gap": 16,
            "marginBottom": 16,
            "paddingHorizontal": 0,
          }
        }
      >
        <TouchableOpacity
          accessibilityRole="button"
          accessible={true}
          activeOpacity={1}
          disabled={true}
          onPress={[Function]}
          onPressIn={[Function]}
          onPressOut={[Function]}
          style={
            {
              "alignItems": "center",
              "alignSelf": "stretch",
              "backgroundColor": "#121314",
              "borderRadius": 12,
              "flexDirection": "row",
              "height": 48,
              "justifyContent": "center",
              "opacity": 0.5,
              "overflow": "hidden",
              "paddingHorizontal": 16,
            }
          }
          testID="manual-backup-step-continue-button"
        >
          <Text
            accessibilityRole="text"
            style={
              {
                "color": "#ffffff",
                "fontFamily": "Geist-Medium",
                "fontSize": 16,
                "letterSpacing": 0,
                "lineHeight": 24,
              }
            }
          >
            Continue
          </Text>
        </TouchableOpacity>
      </View>
    </View>
  </View>
  <View />
</RNCSafeAreaView>
`;

exports[`ManualBackupStep1 render matches snapshot 1`] = `
<RNCSafeAreaView
  edges={
    {
      "bottom": "additive",
      "left": "off",
      "right": "off",
      "top": "off",
    }
  }
  style={
    {
      "backgroundColor": "#ffffff",
      "flex": 1,
    }
  }
>
  <View
    style={
      [
        {
          "flex": 1,
          "paddingHorizontal": 16,
        },
      ]
    }
  >
    <View
      style={
        {
          "flex": 1,
          "justifyContent": "space-between",
        }
      }
    >
      <View
        style={
          {
            "flex": 1,
          }
        }
      >
        <View
          style={
            {
              "flex": 1,
              "flexDirection": "column",
              "gap": 16,
            }
          }
          testID="manual_backup_step_1-screen"
        >
          <Text
            accessibilityRole="text"
            style={
              {
                "color": "#121314",
                "fontFamily": "Geist-Bold",
                "fontSize": 32,
                "letterSpacing": 0,
                "lineHeight": 40,
              }
            }
          >
            Save your Secret Recovery Phrase
          </Text>
          <View
            style={
              {
                "justifyContent": "flex-start",
              }
            }
          >
            <Text
              accessibilityRole="text"
              style={
                {
                  "color": "#686e7d",
                  "fontFamily": "Geist-Regular",
                  "fontSize": 16,
                  "letterSpacing": 0,
                  "lineHeight": 24,
                }
              }
            >
              Your
               
              <Text
                accessibilityRole="text"
                onPress={[Function]}
                style={
                  {
                    "color": "#4459ff",
                    "fontFamily": "Geist-Regular",
                    "fontSize": 16,
                    "letterSpacing": 0,
                    "lineHeight": 24,
                  }
                }
              >
                Secret Recovery Phrase
                 
              </Text>
              gives full wallet access.
               
              <Text
                accessibilityRole="text"
                style={
                  {
                    "color": "#686e7d",
                    "fontFamily": "Geist-Medium",
                    "fontSize": 16,
                    "letterSpacing": 0,
                    "lineHeight": 24,
                  }
                }
              >
                Write it down with the correct order and numbers. Keep it safe and never share it.
              </Text>
            </Text>
          </View>
          <View
            style={
              {
                "backgroundColor": "#ffffff",
                "borderColor": "#b7bbc8",
                "borderRadius": 8,
                "borderWidth": 1,
                "flexDirection": "row",
                "minHeight": 230,
              }
            }
          >
            <View
              style={
                {
                  "borderRadius": 8,
                  "flex": 1,
                }
              }
            >
              <TouchableOpacity
                onPress={[Function]}
                style={
                  {
                    "borderRadius": 8,
                    "bottom": 0,
                    "flex": 1,
                    "height": "100%",
                    "left": 0,
                    "position": "absolute",
                    "right": 0,
                    "top": 0,
                  }
                }
                testID="blur-button"
              >
                <View
                  accessibilityIgnoresInvertColors={true}
                  style={
                    {
                      "borderRadius": 8,
                      "bottom": 0,
                      "flex": 1,
                      "height": "100%",
                      "left": 0,
                      "opacity": 0.5,
                      "position": "absolute",
                      "right": 0,
                      "top": 0,
                    }
                  }
                >
                  <Image
                    resizeMode="cover"
                    source={1}
                    style={
                      [
                        {
                          "bottom": 0,
                          "left": 0,
                          "position": "absolute",
                          "right": 0,
                          "top": 0,
                        },
                        {
                          "height": "100%",
                          "width": undefined,
                        },
                        undefined,
                      ]
                    }
                  />
                </View>
                <View
                  style={
                    {
                      "alignItems": "center",
                      "borderRadius": 8,
                      "flex": 1,
                      "flexDirection": "column",
                      "height": "100%",
                      "justifyContent": "center",
                      "paddingHorizontal": 24,
                      "paddingVertical": 45,
                      "rowGap": 16,
                    }
                  }
                >
                  <SvgMock
                    color="#121314"
                    fill="currentColor"
                    height={32}
                    name="EyeSlash"
                    style={
                      {
                        "height": 32,
                        "width": 32,
                      }
                    }
                    width={32}
                  />
                  <Text
                    accessibilityRole="text"
                    style={
                      {
                        "color": "#121314",
                        "fontFamily": "Geist-Medium",
                        "fontSize": 16,
                        "letterSpacing": 0,
                        "lineHeight": 24,
                      }
                    }
                  >
                    Tap to reveal
                  </Text>
                  <Text
                    accessibilityRole="text"
                    style={
                      {
                        "color": "#121314",
                        "fontFamily": "Geist-Regular",
                        "fontSize": 14,
                        "letterSpacing": 0,
                        "lineHeight": 22,
                      }
                    }
                  >
                    Make sure no one is watching your screen.
                  </Text>
                </View>
              </TouchableOpacity>
            </View>
          </View>
        </View>
      </View>
      <View
        style={
          {
            "gap": 16,
            "marginBottom": 0,
            "paddingHorizontal": 0,
          }
        }
      >
        <TouchableOpacity
          accessibilityRole="button"
          accessible={true}
          activeOpacity={1}
          disabled={true}
          onPress={[Function]}
          onPressIn={[Function]}
          onPressOut={[Function]}
          style={
            {
              "alignItems": "center",
              "alignSelf": "stretch",
              "backgroundColor": "#121314",
              "borderRadius": 12,
              "flexDirection": "row",
              "height": 48,
              "justifyContent": "center",
              "opacity": 0.5,
              "overflow": "hidden",
              "paddingHorizontal": 16,
            }
          }
          testID="manual-backup-step-continue-button"
        >
          <Text
            accessibilityRole="text"
            style={
              {
                "color": "#ffffff",
                "fontFamily": "Geist-Medium",
                "fontSize": 16,
                "letterSpacing": 0,
                "lineHeight": 24,
              }
            }
          >
            Continue
          </Text>
        </TouchableOpacity>
      </View>
    </View>
  </View>
  <View />
</RNCSafeAreaView>
`;
